--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 remote_theme              : pmarsceill/just-the-docs
 color_scheme              : "dark"
+search_enabled            : false
 
 # Site Settings
 title                     : "Hardware for edge AI"
