--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ title_separtor            : "-"
 subtitle                  :
 name                      : "AiBlox BV"
 description               : "An amazing website"
-url                       : "https://www.ai-blox.com"
+url                       : "https://docs.ai-blox.com"
 baseurl                   : ""
 logo                      : "/assets/images/AIBloxLogo@2x.png"
 masthead_title            : "AiBlox BV"
