--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 remote_theme              : pmarsceill/just-the-docs
+theme                     : just-the-docs
 color_scheme              : "light"
 search_enabled            : false
 
@@ -33,3 +34,6 @@ baseurl                   : ""
 logo                      : "/assets/images/AIBloxLogo@2x.png"
 masthead_title            : "AiBlox BV"
 breadcrumbs               : true
+
+plugins:
+  - jekyll-spaceship
