--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 remote_theme              : pmarsceill/just-the-docs
-theme                     : just-the-docs
+#theme                     : just-the-docs
 color_scheme              : "light"
 search_enabled            : false
 
