--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-remote_theme              : pmarsceill/just-the-docs
-#theme                     : just-the-docs
+#remote_theme              : pmarsceill/just-the-docs
+theme                     : just-the-docs
 color_scheme              : "light"
 search_enabled            : false
 
